--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
     "react-scripts": "0.8.4"
   },
   "dependencies": {
-    "chart.js": "^1.1.1",
+    "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "plotly.js": "^1.23.1",
     "react": "^15.4.1",
-    "react-chartjs": "^0.8.0",
-    "react-chartjs-2": "^1.6.2",
     "react-dom": "^15.4.1"
   },
   "scripts": {
