--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.17.1",
     "plotly.js": "^1.23.1",
     "react": "^15.4.1",
+    "react-autosuggest": "^9.0.0",
     "react-dom": "^15.4.1"
   },
   "scripts": {
