--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "plotly.js": "^1.23.1",
+    "qs": "^6.4.0",
     "react": "^15.4.1",
     "react-autosuggest": "^9.0.0",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-router": "^4.0.0-beta.8",
+    "react-router-dom": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
