--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.4",
+    "material-ui": "^0.17.1",
     "moment": "^2.17.1",
     "plotly.js": "^1.23.1",
     "qs": "^6.4.0",
