--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.8.4"
+    "react-scripts": "^0.9.5"
   },
   "dependencies": {
     "lodash": "^4.17.4",
-    "material-ui": "^0.17.1",
+    "material-ui": "^0.17.4",
     "moment": "^2.17.1",
-    "plotly.js": "^1.23.1",
+    "plotly.js": "^1.26.0",
     "qs": "^6.4.0",
-    "react": "^15.4.1",
+    "react": "^15.5.4",
     "react-autosuggest": "^9.0.0",
-    "react-dom": "^15.4.1",
-    "react-router": "^4.0.0-beta.8",
-    "react-router-dom": "^4.0.0"
+    "react-dom": "^15.5.4",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
