--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^15.6.1",
     "react-autosuggest": "^9.0.0",
     "react-dom": "^15.6.1",
+    "react-ga": "^2.2.0",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1"
