--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.4",
-    "material-ui": "^0.18.7",
+    "material-ui": "^1.0.0-beta.6",
     "moment": "^2.18.1",
     "plotly.js": "^1.29.3",
     "qs": "^6.5.0",
