--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
     "react-scripts": "^1.0.10"
   },
   "dependencies": {
-    "lodash": "^4.17.4",
-    "material-ui": "^1.0.0-beta.6",
-    "moment": "^2.18.1",
-    "qs": "^6.5.0",
-    "react": "^15.6.1",
-    "react-autosuggest": "^9.3.2",
-    "react-dom": "^15.6.1",
-    "react-ga": "^2.2.0",
-    "react-router": "^4.1.2",
-    "react-router-dom": "^4.1.2",
-    "react-tap-event-plugin": "^2.0.1"
+    "lodash": "4.17.4",
+    "material-ui": "1.0.0-beta.6",
+    "moment": "2.18.1",
+    "qs": "6.5.0",
+    "react": "15.6.1",
+    "react-autosuggest": "9.3.2",
+    "react-dom": "15.6.1",
+    "react-ga": "2.2.0",
+    "react-router": "4.1.2",
+    "react-router-dom": "4.1.2",
+    "react-tap-event-plugin": "2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
